@@ -1,4 +1,5 @@
 [1.6.0]
+- API Change: Added optional hostname argument to Net.newServerSocket method to allow specific ip bindings for server applications made with gdx.
 - API Change: GlyphLayout xAdvances now have an additional entry at the beginning. This was required to implement tighter text bounds. #3034
 - API Change: Label#getTextBounds changed to getGlyphLayout. This exposes all the runs, not just the width and height.
 - In the 2D ParticleEditor, all chart points can be dragged at once by holding ctrl. They can be dragged proportionally by holding ctrl-shift.
